--- a/kicauanwongcilik.css
+++ b/kicauanwongcilik.css
@@ -76,7 +76,8 @@ header .top-section .child-menu{
 	display: block;
 }
 header .logo img{
-	width: 60%;
+	width: 100%;
+	margin:0px auto;
 }
 header .logo{
 	text-align: center;
